third_party/WebKit/WebCore/platform/Font.cpp
@@ -283,6 +283,7 @@ Font::Font()
     : m_pageZero(0)
     , m_letterSpacing(0)
     , m_wordSpacing(0)
+    , m_isPlatformFont(false)
 {
 }
 
@@ -291,6 +292,7 @@ Font::Font(const FontDescription& fd, short letterSpacing, short wordSpacing)
     , m_pageZero(0)
     , m_letterSpacing(letterSpacing)
     , m_wordSpacing(wordSpacing)
+    , m_isPlatformFont(false)
 {
 }
 
@@ -299,6 +301,7 @@ Font::Font(const FontPlatformData& fontData, bool isPrinterFont)
     , m_pageZero(0)
     , m_letterSpacing(0)
     , m_wordSpacing(0)
+    , m_isPlatformFont(true)
 {
     m_fontDescription.setUsePrinterFont(isPrinterFont);
     m_fontList->setPlatformFont(fontData);
@@ -311,6 +314,7 @@ Font::Font(const Font& other)
     , m_pageZero(other.m_pageZero)
     , m_letterSpacing(other.m_letterSpacing)
     , m_wordSpacing(other.m_wordSpacing)
+    , m_isPlatformFont(other.m_isPlatformFont)
 {
 }
 
