third_party/WebKit/WebCore/platform/mac/FontCacheMac.mm
@@ -160,8 +160,8 @@ const FontData* FontCache::getFontDataForCharacters(const Font& font, const UCha
     NSFontTraitMask substituteFontTraits = [manager traitsOfFont:substituteFont];
 
     FontPlatformData alternateFont(substituteFont, 
-        (traits & NSBoldFontMask) && !(substituteFontTraits & NSBoldFontMask),
-        (traits & NSItalicFontMask) && !(substituteFontTraits & NSItalicFontMask));
+        !font.isPlatformFont() && (traits & NSBoldFontMask) && !(substituteFontTraits & NSBoldFontMask),
+        !font.isPlatformFont() && (traits & NSItalicFontMask) && !(substituteFontTraits & NSItalicFontMask));
     return getCachedFontData(&alternateFont);
 }
 
